--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -2,6 +2,11 @@
   "url": "Use the following URL to let the bot join your server!\nhttps://discordapp.com/oauth2/authorize?client_id={clientId}&scope=bot",
   "welcome": "**Thank you for adding me!** 🔥\n- My prefix is `{prefix}`. Want to change it? Check all configuration options here: **<https://github.com/markokajzer/discord-soundbot/wiki/Configuration>**.\n- You can see a list of commands with `{prefix}help.`\n- Get started with one of the sample sounds `{prefix}airhorn` or `{prefix}johncena`.\n- Add your own sounds by using `{prefix}add` and dragging in a sound file!\n- Need more help? Join the support server: **<https://discordapp.com/invite/JBw2BNx>**.",
 
+  "insults": {
+    "wrongChannel": "Fuck off, I only talk to people in {channels} <@{authorId}>",
+    "wrongChannelSFW": "<@{authorId}>, please communicate with the bot only in {channels}"
+  },
+
   "help": {
     "headline": "Use the prefix `{prefix}` with the following commands:",
 
